vpc.tf
resource "aws_vpc" "main" {
    cidr_block = var.cidr_block_vpc
    tags = {
        Name = "vpc_day1"
    }
}
